--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -41,4 +41,5 @@ jobs:
          webpack --config ./webpack.production.config.js
          git add -A
          git commit -m 'update: push dist'
-         git push
+         git remote add origin git@github.com:linxiaoki/webpack_sample_project-practice
+         git push origin master
